# test-pre-commit

./: .gitignore  .pre-commit-hooks.yaml  README.md  pyproject.toml
.github/workflows/: pre-commit.yml
